<resources>
    <string name="app_name">cuci sepatu tas</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="cari_dropzone_terdekat">Cari dropzone terdekat</string>
    <string name="pilih_dari_peta">Pilih dari peta</string>
    <string name="cari_Dropzone_terdekat">Cari dropzone terdekat</string>
    <string name="deep_cleaning">Deep Cleaning</string>
    <string name="todo">TODO</string>
    <string name="mulai_dari">Mulai dari</string>
    <string name="Mulai_dari">Mulai dari</string>
    <string name="pesan">Pesan</string>
    <string name="_35_000">35.000</string>
    <string name="ulasan_dan_layanan">Ulasan dan layanan</string>
    <string name="pesann">Pesan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="deep_cleaning_treatment_package_for_5_pair_shoes">Deep Cleaning Treatment Package for 5 Pair Shoes !</string>
    <string name="deep_cleaning_treatment_package_for_4_pair_shoes">Deep Cleaning Treatment Package for 4 Pair Shoes !</string>
    <string name="express_deep_cleaing_that_only_takes_24_hours_to_complete">Express deep cleaing that only takes 24 hours to complete</string>
    <string name="ulasan_dan_penilaian">Ulasan dan penilaian</string>
    <string name="Enter_Number_1">Enter Number 1</string>
    <string name="enterwhatyouwant">EnterWhatYouWant</string>
    <string name="enterwhatyouwants">EnterWhatYouWants</string>
    <string name="deep_cleaning_treatment_on_the_spot">Deep Cleaning Treatment On The Spot!</string>
    <string name="akun">Akun</string>
    <string name="todoo">TODO</string>
    <string name="checkout">Checkout</string>
    <string name="displayonly">displayOnly</string>
    <string name="title_activity_sidebar_menu">Sidebar_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_beranda">Beranda</string>
    <string name="menu_Pesanan">Pesanan</string>
    <string name="menu_Notifikasi">Notifikasi</string>
    <string name="menu_Promo">Promo</string>
    <string name="jadwal_pengiriman">Jadwal Pengiriman</string>
    <string name="pengiriman_dan_pembayaran">Pengiriman dan Pembayaran</string>
    <string name="Checkout">Checkout</string>
    <string name="rp240_000">Rp240.000</string>
    <string name="tambah_alamat">Tambah Alamat +</string>
    <string name="pilih_alamat">Pilih Alamat</string>
    <string name="displayonlyy">displayonlyy</string>
    <string name="displayygy">displayygy</string>
    <string name="deep_cleaningg">Deep Cleaning</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="laala">laala</string>
    <string name="title_activity_repair">RepairActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>