<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    tools:context=".bottombar.Homeactivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layouttoolbar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.018"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.01">

                        <ImageView
                            android:id="@+id/sidebar"
                            android:layout_width="37dp"
                            android:layout_height="23dp"
                            android:layout_marginTop="10dp"
                            android:contentDescription="@string/laala"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.018"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.008"
                            app:srcCompat="@drawable/menu"
                            tools:ignore="MissingConstraints" />

                </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:menu="@menu/main_menu_for_sidebar"
            app:headerLayout="@layout/nav_header_sidebar_menu"
            android:layout_gravity="start" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <Button
                    android:id="@+id/ygy"
                    android:layout_width="309dp"
                    android:layout_height="53dp"
                    android:backgroundTint="#D9D9D9"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="62dp"
                    android:text="@string/cari_Dropzone_terdekat"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    app:cornerRadius="10dp" />


                <ImageView
                    android:id="@+id/button2"
                    android:layout_width="405dp"
                    android:layout_height="463dp"
                    android:backgroundTint="#E2DEDE"
                    android:contentDescription="displayOnly"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:backgroundTint="#FE3D3D"
                    android:layout_marginLeft="262dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/pilih_dari_peta"
                    android:textColor="#212121"
                    android:textSize="7sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.87"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.008"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/button23"
                    android:layout_width="172dp"
                    android:layout_height="48dp"
                    android:backgroundTint="#FE3D3D"
                    android:layout_marginTop="300dp"
                    android:layout_marginLeft="220dp"
                    android:text="Unyellowing"
                    android:onClick="launchUnyellowingActivity"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.938"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.436" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="172dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="350dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="#FE3D3D"
                    android:text="Repaint"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.08"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.534" />


                <Button
                    android:id="@+id/button7"
                    android:layout_width="172dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="300dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="#FE3D3D"
                    android:text="Deep Cleaning"
                    android:onClick="launchDeepCleanActiviy"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.08"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.437" />

                <Button
                    android:id="@+id/button24"
                    android:layout_width="172dp"
                    android:layout_height="48dp"
                    android:backgroundTint="#FE3D3D"
                    android:layout_marginTop="350dp"
                    android:layout_marginLeft="220dp"
                    android:text="Repair"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.935"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.533" />

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="407dp"
                    android:layout_height="274dp"
                    android:layout_marginTop="30dp"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.052"
                    app:srcCompat="@drawable/slidee" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="600dp"
                    android:layout_marginLeft="180dp"
                    android:backgroundTint="#FE3D3D"
                    android:src="@drawable/qr_icon"
                    />

                <!--buat bottom bar -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="620dp">

                        <ImageView
                            android:id="@+id/icon_Home"
                            android:layout_width="47dp"
                            android:layout_height="37dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="22dp"
                            android:elevation="100dp"
                            android:src="@drawable/clarity_home_line" />

                        <TextView
                            android:id="@+id/Beranda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="49dp"
                            android:layout_marginLeft="-43dp"
                            android:elevation="100dp"
                            android:text="Beranda"
                            android:textColor="#B40C0C"
                            android:textSize="11sp" />

                        <ImageView
                            android:id="@+id/pesanan_icon"
                            android:layout_width="44dp"
                            android:layout_height="41dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="40dp"
                            android:layout_marginBottom="16dp"
                            android:contentDescription="yesGuys"
                            android:elevation="100dp"
                            android:onClick="launchPesananActivity"
                            android:src="@drawable/icon_park_outline_transaction_order_2" />

                        <TextView
                            android:id="@+id/Pesanann"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="49dp"
                            android:layout_marginLeft="-44dp"
                            android:elevation="100dp"
                            android:text="Pesanan"
                            android:textColor="#000000"
                            android:textSize="11sp" />

                        <ImageView
                            android:id="@+id/promooo"
                            android:layout_width="47dp"
                            android:layout_height="37dp"
                            android:layout_marginLeft="110dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/promoygy" />

                        <TextView
                            android:id="@+id/promo"
                            android:layout_width="51dp"
                            android:layout_height="17dp"
                            android:layout_marginTop="49dp"
                            android:layout_marginLeft="-40dp"
                            android:text="Promo"
                            android:elevation="100dp"
                            android:textColor="#000000"
                            android:textSize="11sp"/>

                        <ImageView
                            android:id="@+id/akun_icon"
                            android:layout_width="36dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="30dp"
                            android:contentDescription="@string/todoo"
                            android:elevation="100dp"
                            android:onClick="launchaAkunActivity"
                            android:src="@drawable/vector_4" />

                        <TextView
                            android:id="@+id/Akun"
                            android:layout_width="31dp"
                            android:layout_height="17dp"
                            android:layout_marginLeft="-30dp"
                            android:layout_marginTop="49dp"
                            android:elevation="100dp"
                            android:text="@string/akun"
                            android:textColor="#000000"
                            android:textSize="11sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/layanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="280dp"
                    android:text="Layanan"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.377"/>

                <TextView
                    android:id="@+id/Promoo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Promo"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="400dp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.051"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.595" />


                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="420dp"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.834">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView21"
                                    android:layout_width="291dp"
                                    android:layout_height="188dp"
                                    android:elevation="100dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="1.0"
                                    app:layout_constraintStart_toStartOf="@+id/button2"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintVertical_bias="0.834"
                                    app:srcCompat="@drawable/cuci1" />

                                <ImageView
                                    android:id="@+id/imageView8"
                                    android:layout_width="292dp"
                                    android:layout_height="186dp"
                                    app:srcCompat="@drawable/cuci2"
                                    tools:layout_editor_absoluteX="35dp"
                                    tools:layout_editor_absoluteY="443dp" />

                        </LinearLayout>
                </HorizontalScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.drawerlayout.widget.DrawerLayout>



