<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#654D4D"
    android:id="@+id/drawer_layout_for_akun"
    tools:context=".bottombar.AkunActivity">


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="1502dp"
        android:layout_height="210dp"
        android:layout_marginBottom="525dp"
        android:src="@drawable/nama" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="140dp"
        android:text="HaikalHanis17222"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="115dp"
        android:text="haikal17hanis@gmail.com"
        android:textColor="#FFFFFF"
        android:textSize="13sp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layouttoolbar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01">

            <ImageView
                android:id="@+id/sidebar"
                android:layout_width="37dp"
                android:layout_height="23dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.018"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.008"
                app:srcCompat="@drawable/menu"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/main_menu_for_sidebar"
        app:headerLayout="@layout/nav_header_sidebar_menu"
        android:layout_gravity="start" />
    <!--biar dihide dari pandangan user terlebih dahulu -->


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="620dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/icon_Home"
            android:layout_width="47dp"
            android:layout_height="37dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="5dp"
            android:elevation="100dp"
            android:onClick="launchHomeMenuActivitity"
            android:src="@drawable/clarity_home_line" />

        <TextView
            android:id="@+id/Beranda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-43dp"
            android:layout_marginTop="49dp"
            android:elevation="100dp"
            android:text="Beranda"
            android:textColor="#B40C0C"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/pesanan_icon"
            android:layout_width="44dp"
            android:layout_height="41dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="yesGuys"
            android:elevation="100dp"
            android:onClick="launchPesananActivity"
            android:src="@drawable/icon_park_outline_transaction_order_2" />


        <TextView
            android:id="@+id/Pesanann"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-44dp"
            android:layout_marginTop="49dp"
            android:elevation="100dp"
            android:text="Pesanan"
            android:textColor="#000000"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/promooo"
            android:layout_width="47dp"
            android:layout_height="37dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/promoygy" />

        <TextView
            android:id="@+id/promo"
            android:layout_width="51dp"
            android:layout_height="17dp"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="49dp"
            android:elevation="100dp"
            android:text="Promo"
            android:textColor="#000000"
            android:textSize="11sp" />


        <ImageView
            android:id="@+id/akun_icon"
            android:layout_width="36dp"
            android:layout_height="31dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todoo"
            android:elevation="100dp"
            android:onClick="launchaAkunActivity"
            android:src="@drawable/vector_4" />


        <TextView
            android:id="@+id/Akun"
            android:layout_width="31dp"
            android:layout_height="17dp"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="49dp"
            android:elevation="100dp"
            android:text="@string/akun"
            android:textColor="#000000"
            android:textSize="11sp" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="180dp"
            android:backgroundTint="#FE3D3D"
            android:src="@drawable/qr_icon"
            />


        <Button
            android:id="@+id/layerfirst3"
            android:layout_width="299dp"
            android:layout_height="90dp"
            android:backgroundTint="#FFFFFF"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="490dp"
            android:contentDescription="displayya"
            android:shadowColor="#000000"
            app:cornerRadius="15dp" />

        <ImageView
            android:id="@+id/logOut"
            android:layout_width="28dp"
            android:layout_height="20dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="530dp"
            android:elevation="100dp"
            app:srcCompat="@drawable/logout" />

        <ImageView
            android:id="@+id/gearIcon"
            android:layout_width="45dp"
            android:layout_height="29dp"
            android:layout_marginBottom="76dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="370dp"
            android:elevation="100dp"
            android:src="@drawable/gearicon" />

        <Button
            android:id="@+id/layerfirst2"
            android:layout_width="301dp"
            android:layout_height="134dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="340dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="displayya"
            android:shadowColor="#000000"
            app:cornerRadius="15dp" />

        <ImageView
            android:id="@+id/languangeIcon"
            android:layout_width="51dp"
            android:layout_height="30dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="420dp"
            android:elevation="100dp"
            android:src="@drawable/languangeicon" />

        <Button
            android:id="@+id/fingerprint"
            android:layout_width="205dp"
            android:layout_height="48dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="360dp"
            android:backgroundTint="#FFFFFF"
            android:elevation="100dp"
            android:text="Pengaturan"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#0E0E0E" />

        <Button
            android:id="@+id/fingerprint2"
            android:layout_width="205dp"
            android:layout_height="48dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="410dp"
            android:backgroundTint="#FFFFFF"
            android:elevation="100dp"
            android:text="Bahasa"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#0E0E0E" />

        <Button
            android:id="@+id/logout"
            android:layout_width="232dp"
            android:layout_height="48dp"
            android:backgroundTint="#ffffff"
            android:elevation="100dp"
            android:onClick="launchLoadingActivity"
            android:text="Logout"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#0E0E0E"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="515dp"
            />

        <Button
            android:id="@+id/layerfirst"
            android:layout_width="299dp"
            android:layout_height="172dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="158dp"
            android:backgroundTint="#FFFFFF"
            android:shadowColor="#000000"
            app:cornerRadius="15dp" />

        <ImageView
            android:id="@+id/profilIcon"
            android:layout_width="29dp"
            android:layout_height="33dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="180dp"
            android:elevation="100dp"
            android:src="@drawable/vector_4"
            />

        <Button
            android:id="@+id/profil"
            android:layout_width="232dp"
            android:layout_height="48dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="175dp"
            android:backgroundTint="#FFFFFF"
            android:text="Profil"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#000000"
            />

        <ImageView
            android:id="@+id/noteIcon"
            android:layout_width="29dp"
            android:layout_height="34dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="230dp"
            android:elevation="100dp"
            app:srcCompat="@drawable/noteicon" />

        <Button
            android:id="@+id/pesanan"
            android:layout_width="232dp"
            android:layout_height="48dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="220dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/menu_Pesanan"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/bellIcon"
            android:layout_width="29dp"
            android:layout_height="31dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="280dp"
            android:elevation="100dp"
            android:src="@drawable/bellicon" />

        <Button
            android:id="@+id/pesanan4"
            android:layout_width="232dp"
            android:layout_height="48dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="270dp"
            android:backgroundTint="#FFFFFF"
            android:text="Notifikasi"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#000000" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</androidx.drawerlayout.widget.DrawerLayout>